scribble/scribble-assertions/src/test/resources/good/extensions/assertions/phantom/DbCHistorySensititivy.scr
module bad.extensions.assertions.DbCHistorySensititivy;


type <java> "java.lang.int" from "rt.jar" as int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// History Sensitivity
global protocol Proto1(role A, role B, role C)
{
	MSG(x:int) from A to B;
	
	MSG(y:int) from B to C;
	
	//[z>x]
	MSG(z:int) from C to A;  @"(z > x)"
}
