scribble/scribble-assertions/src/test/resources/bad/extensions/assertions/RecWithAssertions.scr
module bad.extensions.assertions.RecWithAssertions;


type <java> "java.lang.int" from "rt.jar" as int;


global protocol Proto1(role A, role B, role C)
{
//rec Loop {
	choice at A {
	
	//[x<10]
	MSG1(x:int) from A to B;  @"(x < 10)"
	
	} or {
	//[y>10]
	MSG2(y:int) from A to B;  @"(y > 10)"
	//continue Loop; 
	//}
	do Proto1(A, B, C);
}
	//[z<y]
	MSG3(z:int) from B to C;  @"(z < y)"
}
